added a statement on

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
         <div class="row5">
             <button class="number-button zero" value="0">0</button>
-            <button class="decimal" value=".">.</button>
+            <button class="number-button" value=".">.</button>
             <button class="equal">=</button>
         </div>
     </div>
